--- a/roles/fabric/tasks/main.yml
+++ b/roles/fabric/tasks/main.yml
@@ -9,13 +9,12 @@
   when: item.environment[0] == 'TYPE=FABRIC'
 
 - name: Purge previous fabric mods from server directories
-  file:
-    state: absent
-    path: "{{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/mods/"
+  shell: "rm {{ docker_compose_generator_output_path }}/data/{{ item.service_name }}/mods/*.jar"
   loop: "{{ containers }}"
   loop_control:
     label: "{{ item.service_name }}"
   when: item.environment[0] == 'TYPE=FABRIC'
+  ignore_errors: yes
 
 - name: Create fabric mods directory
   file:
