--- a/vars/plugins.yml
+++ b/vars/plugins.yml
@@ -10,3 +10,5 @@ ViaBackwards: ViaBackwards-3.2.0.jar
 ViaVersion: ViaVersion-3.2.0.jar
 WorldEdit: worldedit-bukkit-7.1.0.jar
 WorldGuard: worldguard-bukkit-7.0.3.jar
+DragonEggDrop: DragonEggDrop-1.9.2.jar
+MobArena: MobArena.jar
